[tool.poetry]
name = "doctran"
version = "0.0.14"
description = "Document transformation framework for vector based retrieval"
authors = ["Jason Fan <jason.wc.fan@gmail.com>", "Ayan Bandyopadhyay <ayanb9440@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8.1"
pydantic = "^2.4.2"
lxml = "^4.9.2"
openai = "^0.28.1"
presidio-analyzer = "^2.2.33"
presidio-anonymizer = "^2.2.33"
spacy = "3.6.1"
tiktoken = "^0.5.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.23.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
