[tool.poetry]
name = "doctran"
version = "0.0.14"
description = "Document transformation framework for vector based retrieval"
authors = ["Jason Fan <jason.wc.fan@gmail.com>", "Ayan Bandyopadhyay <ayanb9440@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.*"
pydantic = "2.*"
lxml = "4.*"
openai = "0.*"
presidio-analyzer = "2.*"
presidio-anonymizer = "2.*"
spacy = "3.*"
tiktoken = "0.*"


[tool.poetry.group.dev.dependencies]
ipykernel = "6.*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
